<resources>
    <string name="app_name">SMS</string>
    <string name="action_settings">Settings</string>
    <string name="app_tag">Socaity Management System</string>
    <string name="forgot_password">Enter Your Mail Id</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="your_zip">Enter Pin Code(Optional)</string>
    <string name="your_post_office">Enter Your Post Office(Optional)</string>
    <string name="your_landmark">Enter LandMark</string>
    <string name="toobar_address">Address</string>
    <string name="your_name">Enter Your Name</string>
    <string name="your_dob">Enter Your Date Of Birth</string>
    <string name="gender">Gender :</string>
    <string name="your_father">Enter Your Father\'s Name</string>
    <string name="your_house">Enter House No</string>
    <string name="your_street">Enter Street</string>
    <string name="email">Email Id</string>
    <string name="your_city">Enter Your City</string>
    <string name="update">Update</string>

    <array name="insurance">
        <item>Health Insurance</item>
        <item>Life Insurance</item>
        <item>Vehicle Insurance</item>
        <item>Agricultural insurance‎</item>
        <item>Property insurance</item>
        <item>Home insurance</item>
    </array>

    <array name="event_list">
        <item>Kitty Party Organisers</item>
        <item>Religious Event Organisers</item>
        <item>Christian Wedding Planners</item>
        <item>DJ Services‎</item>
        <item>Camp and Trip Event Organisers</item>
        <item>Wedding Organisers</item>
        <item>Birthday Party Organisers</item>
        <item>Party Organisers</item>
        <item>Stage Shows Organisers</item>
        <item>Sangeet Organisers‎</item>
        <item>Mandap Decoration Services</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
