<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/backgroundd">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"-->
            <!--android:id="@+id/toolbarCart"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="?attr/actionBarSize"-->
            <!--android:background="?attr/colorPrimary"-->
            <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />-->

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/toolbarMyAccount"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <TextView
                android:layout_below="@+id/toolbarMyAccount"
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="10dp"
                android:textSize="17sp"
                android:gravity="center_horizontal"
                android:textStyle="bold"/>
            <EditText
                android:layout_below="@+id/txtEmail"
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_background"
                android:padding="7dp"
                android:hint="@string/your_name"/>
            <EditText
                android:id="@+id/edDateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edName"
                android:layout_marginTop="7dp"
                android:background="@drawable/et_background"
                android:padding="7dp"
                android:hint="@string/your_dob"/>
            <TextView
                android:id="@+id/txtGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edDateOfBirth"
                android:layout_marginTop="7dp"
                android:text="@string/gender"
                android:padding="5dp"
                android:textSize="17sp"
                android:textColor="#FFF"/>
            <RadioGroup
                android:layout_below="@+id/txtGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rdGroupGender"
                android:orientation="horizontal"
                android:weightSum="3"
                android:background="@drawable/et_background">
                <RadioButton
                    android:id="@+id/rbmale"
                    android:text="Male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <RadioButton
                    android:id="@+id/rbFemale"
                    android:text="Female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <RadioButton
                    android:id="@+id/rbOther"
                    android:text="Other"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </RadioGroup>
            <EditText
                android:id="@+id/edFathersName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rdGroupGender"
                android:layout_marginTop="7dp"
                android:background="@drawable/et_background"
                android:padding="7dp"
                android:hint="@string/your_father"/>
            <EditText
                android:id="@+id/edHouseNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edFathersName"
                android:layout_marginTop="7dp"
                android:background="@drawable/et_background"
                android:padding="7dp"
                android:hint="@string/your_house"/>
            <EditText
                android:id="@+id/edStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edHouseNo"
                android:layout_marginTop="7dp"
                android:background="@drawable/et_background"
                android:padding="7dp"
                android:hint="@string/your_street"/>
            <EditText
                android:id="@+id/edCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edStreet"
                android:layout_marginTop="7dp"
                android:background="@drawable/et_background"
                android:padding="7dp"
                android:hint="@string/your_city"/>
            <EditText
                android:id="@+id/edZipCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edCity"
                android:layout_marginTop="7dp"
                android:background="@drawable/et_background"
                android:padding="7dp"
                android:hint="@string/your_zip"/>
            <Button
                android:background="@drawable/button_booknow"
                android:textSize="18sp"
                android:textColor="#FFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnUpdate"
                android:text="@string/update"
                android:layout_below="@+id/edZipCode"
                android:layout_marginTop="7dp"/>

        </RelativeLayout></LinearLayout></ScrollView>